Módulo de Espirometria finalizado